# snax

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  genesis.json  snax.doxygen.in  snax.version.in  snax_build.sh  snax_install.sh  snax_uninstall.sh  testnet.md  testnet.template
.buildkite/: coverage.yml  debug.yml  docker.yml  long_running_tests.yml  pipeline.yml  sanitizers.yml
CMakeModules/: FindWasm.cmake  MASSigning.cmake  SnaxTester.cmake.in  SnaxTesterBuild.cmake.in  additionalPlugins.cmake  cotire.cmake  doxygen.cmake  installer.cmake  package.cmake  snax-config.cmake.in  wasm.cmake
Docker/: Dockerfile  README.md  clisnax.sh  config.ini  docker-compose-latest.yml  docker-compose.yml  kxd.sh  snaxnoded.sh
contracts/: CMakeLists.txt
debian/: postinst
jest_tests/: .gitignore  airdrop.js  helpers.js  p.steem.js  package.json  platform.js  producernode.sh  setup_airdrop.sh  setup_platform.sh  setup_steem.sh  setup_system.sh  snaxnode.sh  system.js
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/testing/include/snax/testing/: chainbase_fixture.hpp  tester.hpp  tester_network.hpp
plugins/: COMMUNITY.md  snax-make_new_plugin.sh
programs/: CMakeLists.txt
programs/snax-blocklog/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  abigen.sh  boost.rb  clean_old_install.sh  generate_bottle.sh  generate_tarball.sh  snax-tn_bounce.sh  snax-tn_down.sh  snax-tn_roll.sh  snax-tn_up.sh  snax_build_amazon.sh  snax_build_centos.sh  snax_build_darwin.sh  snax_build_fedora.sh  snax_build_ubuntu.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  chain_plugin_tests.cpp  consensus-validation-malicious-producers.py  core_symbol.py  distributed-transactions-remote-test.py  distributed-transactions-test.py  get_table_tests.cpp  impaired_network.py  launcher_test.py  lossy_network.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  restart-scenarios-test.py  snaxnode_forked_chain_test.py  snaxnode_run_remote_test.py  snaxnode_run_test.py  snaxnode_under_min_avail_ram.py  snaxnode_voting_test.py  testUtils.py  (+3 more)
(+477 files in other folders)
